ames/pds_web/test-data/volumes/bad/data/attachedStream.lbl
PDS_VERSION_ID = PDS3
RECORD_TYPE = STREAM
RECORD_BYTES = 81                                                              
FILE_RECORDS = 2
LABEL_RECORDS = 6
^IMAGE = 128 <BYTES>
END
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx